	* Fixed ANSI reset color code.
	* GenPrime algorithm updated slightly to improve speed.
	* SplayTree can't handle duplicate keys properly, so 1:1 compatibility with AVLTree/RedBlackTree has been broken to disable certain duplicate key handling functions.
	* CPUID updated with December 2007 Intel CPUID specification.
	* Rare bug in AVLTree corrected.

VERSION 0.6.6 (r593)
	* Visual Studio 2008 support added.
	* More example projects added.
	* CPUID now detects AMD cache descriptors.
	* ConvertToDArray and ConvertIndexToDArray functions optimized, deprecation notice removed
	* Fixed Stopwatch on FreeBSD, NetBSD and OpenBSD
	* Added AVLTree, SplayTree, ShellSort, InsertionSort, and BubbleSort (the last two for educational purposes only)
	* Added a basic HashTable implementation.
	* AVLTree, RedBlackTree, and SplayTree have close-to-identical (if not perfectly identical) APIs.
	* Cleaned up some 'using namespace' statements that were causing hard-to-detect errors.
	* Many, many minor fixes.
	* Doxygen config updated to v1.5.4

VERSION 0.6.5 (r427)
	* CrissCross::Data::Compare now can compare C-style strings.
	* x64 target added for Visual Studio 2005 projects.
	* New crisscross/crisscross.h added which basically includes every common CrissCross header.
	* RedBlackTree now works with char* string keys.
	* No longer needlessly recompiles on Mac OS X (build_number.h regeneration caused a recompile).
	* QuickSort::Sort is now marked deprecated with _CC_DEPRECATE_SLOW as a warning to those who use it.
	* CoreIOWriter had a few functions which had std::string passed by value rather than by reference.
	* DStack::peek() function added.
	* FastestSort and MemoryEfficientSort aliases added by request.
	* BTree alias for RedBlackTree added.
	* Cleaned data structure function names a bit (getData() is now simply get(), etc).
	* Added compatibility with Tosser data structure library, allowing CrissCross to be used with the Onlink project.